--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "description": "Inerest Centric Social media Platform",
   "dependencies": {
     "backend": "file:",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4"
   }
 }
